--- a/01_python/01.python_intro.ipynb
+++ b/01_python/01.python_intro.ipynb
@@ -2863,11 +2863,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# contain test를 확인해봅시다."
+    "a = 'fsdfsdg'\n",
+    "a.count('g')\n",
+    "\n"
    ]
   },
   {
@@ -2971,7 +2984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2980,7 +2993,9 @@
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
       "elppa\n",
-      "epa\n"
+      "epa\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
      ]
     }
    ],
@@ -2994,7 +3009,10 @@
     "l[::-1] # 뒤집기\n",
     "l[::-2] # 뒤집고 쉼표 두개씩 건너 뛰기\n",
     "print('apple'[::-1])\n",
-    "print('apple'[::-2])\n"
+    "print('apple'[::-2])\n",
+    "print(l)\n",
+    "l.reverse()\n",
+    "print(l)"
    ]
   },
   {
