--- a/01_python/02.control_of_flow.ipynb
+++ b/01_python/02.control_of_flow.ipynb
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -744,10 +744,8 @@
      "text": [
       "짜장면\n",
       "초밥\n",
-      "0\n",
-      "짜장면\n",
-      "1\n",
-      "초밥\n"
+      "<class 'int'> 짜장면\n",
+      "<class 'int'> 초밥\n"
      ]
     }
    ],
@@ -759,8 +757,8 @@
     "    print(menu)\n",
     "    \n",
     "for index, menu in enumerate(lunch):\n",
-    "    print(index)\n",
-    "    print(menu) # 튜플로 바뀌어서 나옴\n",
+    "    print(type(index), menu)\n",
+    "#     print(menu) # 튜플로 바뀌어서 나옴\n",
     "    \n",
     "# menu = (0, lunch[0])\n",
     "# print(menu)\n",
