--- a/01_python/08.OOP_advanced.ipynb
+++ b/01_python/08.OOP_advanced.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "클래스 변수\n",
+      "CLASS VAR\n"
+     ]
+    }
+   ],
    "source": [
     "# 클래스 변수에 접근/재할당해 봅시다.\n",
     "print(TestClass.class_variable)\n",
@@ -96,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "인스턴스--변수\n"
+     ]
+    }
+   ],
    "source": [
     "# 인스턴스를 생성하고 확인해 봅시다.\n",
     "test_instance = TestClass('인스턴스', '변수')\n",
@@ -107,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "인스턴스 재할당--변수 재할당\n"
+     ]
+    }
+   ],
    "source": [
     "# 인스턴스 변수를 재할당 해봅시다.\n",
     "test_instance.instance_var1 = '인스턴스 재할당'\n",
@@ -190,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,11 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2515982214256 2515982214256\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 인스턴스 입장에서 확인해 봅시다.\n",
     "print(id(my_instance.instance_method()), id(my_instance))\n",
@@ -225,11 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2515972057176 2515972057176\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 인스턴스는 클래스 메소드에 접근합니다.\n",
     "print(id(my_instance.class_method()), id(MyClass))\n",
@@ -238,9 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":)\n"
+     ]
+    }
+   ],
    "source": [
     "# 인스턴스는 스태틱 메소드에 접근 가능합니다.\n",
     "print(my_instance.static_method())"
@@ -259,9 +310,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2515972057176 2515972057176\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 클래스 입장에서 확인해 봅시다.\n",
     "print(id(MyClass.class_method()), id(MyClass))\n",
@@ -271,9 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "':)'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#클래스용 메서드인 스태틱도 확인합시다. \n",
     "MyClass.static_method()"
@@ -281,9 +353,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.MyClass at 0x249cc39e470>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#클래스는 인스턴스 메서드에 접근 가능합니다.\n",
     "my_instance.instance_method()\n",
@@ -312,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,9 +419,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wal wal wal\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 각각 이름과 종이 다른 인스턴스를 3개 만들어봅시다.\n",
     "pp1 = Puppy('토트', '말티즈')\n",
@@ -346,14 +439,26 @@
     "pp3 = Puppy('짱', '거의사자')\n",
     "\n",
     "print(pp1.bark(), pp2.bark(), pp3.bark())\n",
-    "print(Puppy.num_of_dogs)"
+    "print(Puppy.num_of_dogs)\n",
+    "print(pp2.num_of_dogs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pp1 = pp2 = pp3 = 1 # 인스턴스 변수와 객체의 연결을 재할당으로 끊어버림\n",
     "Puppy.num_of_dogs"
@@ -361,12 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wal'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Puppy 클래스는 짖을 수 있을까요?\n",
-    "Puppy.bark(pp1) # pp1과 같은 인스턴스를 넣으면 실행되긴 되는데 안쓴다."
+    "Puppy.bark(pp2) # pp1과 같은 인스턴스를 넣으면 실행되긴 되는데 안쓴다."
    ]
   },
   {
@@ -385,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,9 +545,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Birth: 3, Current: 3'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Doggy 인스턴스 3 마리를 만들어보고,\n",
     "dg1 = Doggy('토트', '말티즈')\n",
@@ -482,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,11 +653,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'class Dog'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 함수를 호출해봅시다.\n",
     "Dog.get_class_info()"
@@ -685,9 +823,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "반갑습니다. 저는 사람입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 인사만 할 수 있는 간단한 Person 클래스를 만들어봅시다.\n",
     "class Person:\n",
@@ -706,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,9 +869,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python를 공부합니다.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 학생을 만들어봅시다.\n",
     "s = Student(123, '김싸피')\n",
@@ -734,13 +891,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "반갑습니다. 저는 김싸피입니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 부모 클래스에 정의된 메서드를 호출 할 수 있습니다.\n",
     "s.greeting()\n",
-    "s.population"
+    "Person.population"
    ]
   },
   {
@@ -752,9 +927,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 진짜 상속관계인지 확인해봅시다. (클래스간 상속관계 확인 함수)\n",
     "issubclass(Student, Person)"
@@ -762,9 +948,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "isinstance(s, Student), isinstance(s, Person) # (클래스와 인스턴스의 관계 확인)"
    ]
@@ -788,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,9 +1079,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'충성! 하사 굳 건 이!'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = Soldier('굳건이', 25, '0101234', 'soldier@roka.kr', '하사')\n",
     "s.introduce()"
