--- a/01_python/Untitled.ipynb
+++ b/01_python/Untitled.ipynb
@@ -729,6 +729,450 @@
     "\n",
     "print(func(9, 4, 2, 3, 1, 7, d=3, e=6))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Circle:\n",
+    "    pi = 3.14\n",
+    "    \n",
+    "    def __init__(self, r, x = 0, y = 0):\n",
+    "        self.r = r\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "    def area(self):\n",
+    "        return self.pi * self.r**2\n",
+    "    \n",
+    "    def circumference(self):\n",
+    "        return 2 * Circle.pi * self.r\n",
+    "    \n",
+    "    def center(self):\n",
+    "        return self.x, self.y\n",
+    "    \n",
+    "    def move(self, input_x, input_y):\n",
+    "        self.x, self.y = input_x, input_y\n",
+    "        return self.x, self.y\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Circle(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.26"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.84"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.circumference()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.center()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.move(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Circle(4, x = 3, y = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.24"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.12"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.circumference()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.move(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Puppy:\n",
+    "    num_of_dogs = 0\n",
+    "    \n",
+    "    def __init__(self, name, breed):\n",
+    "        self.name = name\n",
+    "        self.breed = breed\n",
+    "        Puppy.num_of_dogs += 1\n",
+    "        \n",
+    "    def __del__(self):\n",
+    "        Puppy.num_of_dogs -= 1\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        return 'wal'\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3 3\n",
+      "2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp1 = Puppy('토드', '말티즈')\n",
+    "print(Puppy.num_of_dogs)\n",
+    "pp2 = Puppy('콩', '말티즈')\n",
+    "print(pp2.num_of_dogs)\n",
+    "pp3 = Puppy('짱', '시츄')\n",
+    "print(pp1.num_of_dogs, Puppy.num_of_dogs)\n",
+    "\n",
+    "pp3.bark()\n",
+    "pp3 = 1\n",
+    "print(pp1.num_of_dogs, Puppy.num_of_dogs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp3 = 1\n",
+    "print(pp1.num_of_dogs, Puppy.num_of_dogs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp1 = pp2 = 1\n",
+    "print(Puppy.num_of_dogs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 사람과 사람을 같은지 비교하면, 이는 나이가 같은지 비교한 결과를 반환하도록 만들어봅시다.\n",
+    "\n",
+    "class Person:\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def whoIsOlder(self, other):\n",
+    "        if self.age > other.age:\n",
+    "            return self.name\n",
+    "        elif self.age == other.age:\n",
+    "            return 'same'\n",
+    "        else:\n",
+    "            return other.name\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diane\n",
+      "Diane\n",
+      "Seong\n",
+      "Seong\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = Person('Diane', 28)\n",
+    "p2 = Person('Jisun', 27)\n",
+    "p3 = Person('Seong', 29)\n",
+    "print(p1.whoIsOlder(p2))\n",
+    "print(p2.whoIsOlder(p1))\n",
+    "print(p3.whoIsOlder(p1))\n",
+    "print(p3.whoIsOlder(p2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "문자열 메소드 8 3 복사본을 리턴한다 원본 유지\n",
+    "1. capitalize\n",
+    "2. title()\n",
+    "3. upper()\n",
+    "4. lower()\n",
+    "5. swapcase()\n",
+    "6. '-'.join(str, list) > 문자열 리턴\n",
+    "7. replace('a', ' a')\n",
+    "8. strip() rstrip() str.lstrip('he')\n",
+    "\n",
+    "1. find(x): x 의 인덱스 위치 반환 > 없으면 -1 리턴\n",
+    "2. index(x) : 없으면 에러\n",
+    "3. split() > 리스트 리턴\n",
+    "\n",
+    "리스트 메소드 5 5 원본 변형\n",
+    "1. append(x): 그대로 추가\n",
+    "2. extend(x): 분리해서 추가\n",
+    "3. insert(idx, x)\n",
+    "4. remove(x): 특정요소를 하나씩 삭제\n",
+    "5. pop(idx): idx 위치의 요소를 꺼내서 리턴, 원본은 변형 \n",
+    "\n",
+    "1. index(x) 없으면 에러\n",
+    "2. count(x): 특정 요소의 갯수 반환\n",
+    "3. sort()\n",
+    "4. reverse()\n",
+    "5. clear() 리스트 비우기\n",
+    "\n",
+    "딕셔너리 3\n",
+    "1. dict.update(c=3) 없으면 생성, key값 있으면 대체\n",
+    "2. dict.pop('c') 키 넣으면 밸류 나옴/ 원본 변형\n",
+    "3. dict.get('c') value값 리턴 에러 안생김\n",
+    "\n",
+    "list comprehension\n",
+    "enumerate\n",
+    "map\n",
+    "zip\n",
+    "\n",
+    "시퀀스 할 수 있는 메소드들"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43 days, 0:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime,date,time\n",
+    "start = datetime.strptime('2019-06-24','%Y-%m-%d')\n",
+    "end = datetime.strptime('2019-08-06','%Y-%m-%d')\n",
+    "date = end-start\n",
+    "print(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
